# stock_agents

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  test_system.py
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  analysis_agent.py  base.py  data_agent.py  decision_agent.py  report_agent.py  risk_agent.py  sentiment_agent.py
app/api/: dependencies.py
app/api/routes/: agent.py  analysis.py  backtest.py  health.py  history.py  monitor.py  monitoring.py  websocket.py
app/api/websocket/: __init__.py  manager.py
app/db/: __init__.py
app/models/: __init__.py
app/monitoring/: __init__.py  broadcast.py  metrics.py  monitor.py
app/orchestration/: __init__.py  checkpoint.py  orchestrator.py  state.py  workflow.py
app/react_agent/: __init__.py  prompts.py  react_agent.py  state.py
app/resilience/: __init__.py  circuit_breaker.py  decorators.py  retry.py  timeout.py
app/services/: __init__.py  backtest_service.py  data_service.py
app/storage/: __init__.py  database.py
app/tools/: __init__.py  registry.py
app/tools/analysis/: auto_tools.py  fundamental.py  sentiment.py  technical.py
app/tools/data/: fetcher.py  (+2 more)
app/utils/: __init__.py  logging.py  time_helpers.py  validators.py
deploy/: deploy.sh  install-nginx.sh  nginx-full-config.conf  nginx-stock.conf
deployment/docker/: Dockerfile
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json
tests/: __init__.py  conftest.py
tests/integration/: test_agent_routes.py  test_react_agent.py  test_system.py
tests/unit/: test_config.py
(+35 files in other folders)
