[tool.poetry]
name = "stock-agent"
version = "0.1.0"
description = "Multi-agent stock analysis system with LangGraph orchestration"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
# FastAPI and web framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# LangGraph & LangChain - Using compatible versions
langgraph = ">=0.2.0,<0.3.0"
langchain = ">=0.3.0,<0.4.0"
langchain-openai = ">=0.2.0"
langchain-community = ">=0.3.0"
langchain-core = ">=0.3.0,<0.4.0"

# Database
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
redis = "^5.0.1"

# Data & Analysis
pandas = "^2.2.0"
numpy = "^1.26.3"
yfinance = "^0.2.36"
akshare = "^1.12.0"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"

# Backtesting
backtrader = "^1.9.78"

# Visualization
plotly = "^5.18.0"

# Utilities
python-dotenv = "^1.0.0"
httpx = "^0.26.0"
aiofiles = ">=23.2.1"
python-multipart = "^0.0.6"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"
pytest-cov = "^4.1.0"
ruff = "^0.2.0"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
